# bot

./: .gitignore  Hermes验证执行单.md  README.md  pyproject.toml  上线前检查清单.md  工作总记录.md
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
dashboard/: __init__.py  app.py  data_sources.py  decision_review.py  reason_text.py  runtime_reader.py  status_rules.py
docs/: automation_research_factor_dashboard_final_plan.md  bot_quant_full_code_review_prompt.md  bot_quant_merged_review_findings_and_fixes.md  btc_20x_bidir_single_position_plan.md  code_review_checklist.md  eth_single_position_auto_execution_v1.md  factor_research_pipeline_ds_adversarial_review_2026-05-20.md  factor_research_pipeline_m2_governance_adversarial_review_2026-05-20.md  factor_research_pipeline_repair_plan_2026-05-19.md  missed_entry_probe_incident_2026-05-18.md  missed_move_1to4_replay_gate_review_2026-05-21.md  missed_move_replay_root_cause_2026-05-21.md  missed_move_three_tier_probe_ladder_plan_2026-05-21.md  post_entry_dynamic_exit_governance.md  real_order_remediation_plan.md  runtime_dashboard_product_design_spec.md  runtime_stack_manager_plan.md  system_design.md  trading_classics_system_integration.md  trigger_ready_small_probe_contract_review_2026-05-20.md
scripts/: adopt_protective_stop.py  analyze_shadow_preflight_samples.py  archive_runtime_artifacts.ps1  bot_runtime_scheduler.py  launch_protective_stop_dashboard.cmd  launch_protective_stop_dashboard.ps1  launch_runtime_dashboard.cmd  launch_runtime_dashboard.ps1  launch_runtime_stack.cmd  launch_runtime_stack.ps1  (+23 more)
(+95 files in other folders)
