[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-trading-bot"
version = "0.1.0"
description = "ETH-only trading bot shell for quant_system_rebuild"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
analysis = [
  "duckdb>=1.0,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
norecursedirs = ["runtime", ".tmp*", ".pytest_cache"]
